style.css
body{
    background-color: rgb(233, 241, 243);
}

.calcbody{
    background-color: #7e818d;
    background-image: radial-gradient(#70727e, #7e818d, #727685);
    margin: auto;
    margin-top: 100px;
    display: flex;
    flex-direction: column;
    padding: 40px 20px 85px 20px;
    height: 600px;
    width: 470px;
    justify-content: center;
    align-items: center;
    border-radius: 10px;
    box-shadow: -10px 7px #404450;
}

.window{
    background-color: #aade93;
    font-size: 40px;
    color: #394e30;
    margin: 50px 20px 50px 20px;
    padding: 5px;
    min-height: 70px;
    min-width: 425px;
    max-height: 70px;
    max-width: 425px;
    display: flex;
    align-items: center;
    justify-content: end;
    box-shadow: -5px 7px inset;
    text-shadow: -1px 0 #7da16c56, 0 1px #7da16c56, 1px 0 #7da16c56, 0 -1px #7da16c56;
    background-image: radial-gradient(#aade93, #aade93, #94c57f);
}

.field{
    display: flex;
    width: 400px;
    align-items: center;
}

.back{
    width: 290px;
}

.numbers{
    display: flex;
    flex-wrap: wrap;
    
}

.numbersbox{
    display: flex;
    flex-wrap: wrap;

}

.operate{
    display: flex;
    flex-direction: column;
}

button{
    width: 90px;
    height: 90px;
    color:#2a2c33;
    font-size: 20px;
    border-radius: 10px;
    margin: 5px;
    justify-content: center;
    align-items: center;
    box-shadow: -5px 5px;
    border: none;
    background-image: radial-gradient(#bcc8da, #b7c2d3, #adb8c9);
}

button:active {
    background-color: #b7c2d3;;
    box-shadow: -5px 5px inset;
    transform: translateY(4px);
  }

